changed color contrast issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,8 +74,8 @@ footer {
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, .2);
     padding: 1rem;
-    background-color: cornflowerblue;
-    color: orange;
+    background-color: steelblue;
+    color: white;
 }
 
 aside h2 {
